Add applicants modal, improve UI alignment, and enhance admin dashboard components

--- a/backend/env.example
+++ b/backend/env.example
@@ -7,7 +7,7 @@ EMAIL_HOST=smtp.example.com
 EMAIL_PORT=587
 EMAIL_USER=your-smtp-user
 EMAIL_PASS=your-smtp-pass
-EMAIL_FROM="Job Portal <no-reply@example.com>"
+EMAIL_FROM="JobSphere <no-reply@example.com>"
 
 ADMIN_NAME=Admin User
 ADMIN_EMAIL=admin@example.com
